<resources>
    <string name="app_name">Atom Music</string>
    <string name="dashboard">Dashboard</string>
    <string name="shuffle">Shuffle All</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="recent">Recent</string>
    <string name="now">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="title_activity_shuffle">Shuffle List</string>
    <string name="title_activity_recent">Recent</string>
    <string name="title_activity_songs">Songs</string>
    <string name="title_activity_albums">Albums</string>
    <string name="title_activity_genres">Genres</string>
    <string name="title_activity_nowPlaying">Now Playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_artists">Artists</string>
    <string name="title_activity_playlists">Playlists</string>
    <string name="setting">Setting</string>
    <string name="song">Song</string>
    <string name="playlist">Playlist</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="comment1">This is the main screen, it contains the path to all the options of the app like shuffle,songs,playlist,etc</string>
    <string name="comment_album">This is the Album screen that shows all the albums on the device and the playbutton let you play that specific album</string>
    <string name="comment_artist">This is the Artist screen that shows all the artist on the device and the playbutton let you play that specific artist songs</string>
    <string name="comment_genre">This is the Genre screen that shows all the genres on the device and the playbutton let you play that specific genre songs</string>
    <string name="comment_now">This is the Play screen that shows the song that is playing on the device</string>
    <string name="comment_recent">This is the Recent songs screen that shows all the recent songs played before and the playbutton let you play that specific song from that list</string>
    <string name="comment_setting">This is the setting screen that gives you various options of setting like equilizer,signup,etc</string>
    <string name="comment_shuffle">This screen shows the list of shuffled songs that are playing</string>
    <string name="comment_song">Song\nThis is the Play screen that shows the song that is playing on the device. In this MediaPlayer class will be used to playsound and videos and AudioManager to manage audio sources and audio output on the device</string>
    <string name="comment_playlist">This screen shows the Playlist like recently added,custom playlist,etc</string>
    <string name="comment_song1">This screen shows all ths songs that are present on the device</string>
</resources>
