<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.androidexample.atommusic.MainActivity">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/colorTiles"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dashboard"
            android:background="@color/colorTiles"
            android:text="@string/comment1"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/tiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tiles1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shuffle"

                    android:layout_width="0dp"
                    android:layout_height="@dimen/dashTileHeight"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:gravity="center"
                    android:text="@string/shuffle" />

                <TextView
                    android:id="@+id/recent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dashTileHeight"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:gravity="center"
                    android:text="@string/recent" />

                <TextView
                    android:id="@+id/songs"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dashTileHeight"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:gravity="center"
                    android:text="@string/songs" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tiles2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/albums"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dashTileHeight"
                        android:layout_weight="1"
                        android:background="@color/colorTiles"
                        android:gravity="center"
                        android:text="@string/albums" />

                    <TextView
                        android:id="@+id/playlists"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dashTileHeight"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@color/colorTiles"
                        android:gravity="center"
                        android:text="@string/playlists" />

                    <TextView
                        android:id="@+id/artists"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dashTileHeight"
                        android:layout_weight="1"
                        android:background="@color/colorTiles"
                        android:gravity="center"
                        android:text="@string/artists" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tiles3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dashTileHeight"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:background="@color/colorTiles"
                        android:gravity="center"
                        android:text="@string/genres" />

                    <TextView
                        android:id="@+id/nowPlaying"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dashTileHeight"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/colorTiles"
                        android:gravity="center"
                        android:text="@string/now" />

                    <TextView
                        android:id="@+id/settings"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dashTileHeight"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:background="@color/colorTiles"
                        android:gravity="center"
                        android:text="@string/settings" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/dock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/playerbelow" />
</RelativeLayout>
